feat: update add network support
